--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -12,6 +12,7 @@ nav {
     align-items: center;
 }
 
+
 .mainNav div {
     display: flex;
     align-items: center;
@@ -61,6 +62,7 @@ nav {
     border-radius: 45px;
     background-color: transparent;
     transition: .3s;
+    color: rgba(61, 66, 73, 1);
 }
 
 .profile-button:hover {
