--- a/frontend/src/pages/Catalog.css
+++ b/frontend/src/pages/Catalog.css
@@ -42,6 +42,11 @@ main {
     background-color: white;
 }
 
+.menu_form a.active {
+    background-color: #e91e63;
+    color: white;
+}
+
 
 .menu h2 {
     font-family: Playfair Display;
