--- a/frontend/src/components/Card.css
+++ b/frontend/src/components/Card.css
@@ -84,6 +84,11 @@ hr {
     gap: 7px;
 }
 
+.view.added {
+    background-color: var(--color-green-600);
+    color: var(--white);
+}
+
 .icon{
     font-weight: 200;
 }
