--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -85,7 +85,12 @@
     gap: 20px;
 }
 
-
+.favorite {
+    font-size: 20px;
+    display: flex;
+    align-self: center;
+    color: rgba(61, 66, 73, 1);
+}
 
 
 
